--- a/src/rsa/sections/07-sigprim-responses.adoc
+++ b/src/rsa/sections/07-sigprim-responses.adoc
@@ -55,6 +55,7 @@ The following is an example of the response for RSA / Signature Primitive / v1.0
 
 | tcId | Numeric identifier for the test case | integer
 | testPassed | If the message could not be signed | boolean
+| signature | If the message can be signed, the signature. If the encoded value is shorter than the key modulus it should be padded at the front with zero bytes. | hex
 |===
 
 The following is an example of the response for RSA / Signature Primitive / v2.0.
@@ -74,10 +75,20 @@ The following is an example of the response for RSA / Signature Primitive / v2.0
         {
           "tcId": 1,
           "testPassed": true,
+          "signature": "a60b879a8fa382fdf4..."
         },
         {
           "tcId": 2,
           "testPassed": false
+        },
+        {
+          "tcId": 3,
+          "testPassed": false
+        },
+        {
+          "tcId": 4,
+          "testPassed": true,
+          "signature": "a60b879a8fa382fdf4..."
         }
       ]
     }
