Updated the capabilities for sha3.

--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -17,11 +17,13 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 | inEmpty| Implementation does accept null (zero-length) messages| boolean
 | outputLen| Output length for SHAKE. The value for the outputLen property must consist either of a single range object or a single literal value. This restriction is made to simplify the implementation of the Monte Carlo Tests (see <<SHAKE-MCT>>).| domain
 | outBit| SHAKE can output bit-oriented messages| boolean
-| messageLength | The message lengths in bits supported by the IUT. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain. | domain
+| messageLength | The message lengths in bits supported by the IUT. Minimum allowed is 0, maximum allowed is 65536. | domain
 | performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
 NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
+
+NOTE: At least one messageLength > 0 must be supported by an IUT in order to accommodate MCT testing.
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for SHA3 and SHAKE algorithms:
 
