--- a/src/conditioning-components/sections/05-capabilities.adoc
+++ b/src/conditioning-components/sections/05-capabilities.adoc
@@ -21,6 +21,7 @@ The following ConditioningComponent / AES-CBC-MAC / SP800-90B and ConditioningCo
 | revision | The algorithm testing revision to use | string | "SP800-90B"
 | keyLen | The length of keys supported in bits | array | [128, 192, 256]
 | payloadLen | The lengths in bits supported by the IUT | domain | [{"min": 8, "max": 65536, "inc": 8}]
+| outputLen | The lengths in bits suppoerted by the IUT as output only for BlockCipher_DF | domain | [{"min": 128, "max": 512, "inc": 8}]
 |===
 
 NOTE: For ConditioningComponent / AES-CBC-MAC / SP800-90B, the payload itself is processed through the encryption engine. Therefore the minimum 'payloadLen' is 128 bits and the minimum increment is 128 bits. In other words, all values within the 'payloadLen' must correspond to complete AES blocks in bits (a multiple of 128).
@@ -65,6 +66,13 @@ The following is an example of a registration for ConditioningComponents / Block
     {
       "min": 8,
       "max": 65536,
+      "increment": 8
+    }
+  ],
+  "outputLen": [
+    {
+      "min": 128,
+      "max": 512,
       "increment": 8
     }
   ]
