--- a/src/conditioning-components/sections/06-blockcipher-df-test-vectors.adoc
+++ b/src/conditioning-components/sections/06-blockcipher-df-test-vectors.adoc
@@ -12,6 +12,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | The unique group identifier | integer
 | testType | Describes the operation the client should perform on the test data | string
 | keyLen | The length of the key used in the group | integer
+| outputLen | The expected length of the output | integer
 | tests | Array of individual test cases, see <<bc_df_tvjs>> | array
 |===
 
@@ -45,6 +46,7 @@ Here is an abbreviated yet fully constructed example of the prompt for Condition
       "tgId": 1,
       "keyLen": 128,
       "testType": "AFT",
+      "outputLen": 128,
       "tests": [
         {
           "tcId": 1,
