adds clarifying note regarding kdf-components tls 1.0 keyBlockLength

--- a/src/tls/sections/05-capabilities.adoc
+++ b/src/tls/sections/05-capabilities.adoc
@@ -20,6 +20,8 @@ A registration *SHALL* use these properties
 
 NOTE: the "hashAlg" field is *REQUIRED* when "v1.2" is present within the "tlsVersion" array.
 
+NOTE: when the keyBlockLength registration property is supplied for a kdf-components / tls / 1.0 registration, the values supplied for keyBlockLength will be tested across each value supplied to the the tlsVersion property.
+
 [#valid-sha]
 ==== Valid Hash Functions
 
