clarifies/corrects value used in SHA1/2 MCT pseudocode
The SHA1/2 MCT pseudocode incorrectly made references to a value named SmallestSupportedMessageLengthGreaterThanZero. The pseudocode is updated to replace SmallestSupportedMessageLengthGreaterThanZero with LEN(SEED), which is the correct value.

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -56,14 +56,14 @@ if SupportedMessageLengths.Contains(3*digestSize):
         For i = 0 to 999
             MSG = A || B || C
             If  !SupportedMessageLengths.Contains(LEN(MSG)):
-                MSG = TruncateToSize(MSG, SmallestSupportedMessageLengthGreaterThanZero)
+                MSG = TruncateToSize(MSG, LEN(SEED))
             MD = SHA(MSG)
             A = B
             B = C
-            If SmallestSupportedMessageLengthGreaterThanZero >= digestSize:
-                C = MD || CreateZeroBitStringOfLength(SmallestSupportedMessageLengthGreaterThanZero - digestSize)
+            If LEN(SEED) >= digestSize:
+                C = MD || CreateZeroBitStringOfLength(LEN(SEED) - digestSize)
             Else:
-                C = TruncateToSize(MD, SmallestSupportedMessageLengthGreaterThanZero)
+                C = TruncateToSize(MD, LEN(SEED))
         Output MD
         SEED = C
 ----
