removes old SHA MCT note

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -19,9 +19,7 @@ There are two types of tests for SHA-1 and SHA-2: functional tests and Monte Car
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
 
-NOTE: The MCTs were updated, 3/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. The change is backwards compatible. 
-
-NEW NOTE: The MCTs were updated, 7/_/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion was added to the MCT test case JSON (See ___ section of this spec). When a value of "standard" is provided in the prompt file, the standard MCT test is run. When a value of "conistent" is provided in the prompt file, the consistent MCT test is run. When the standard test is run, the MSG hashed will always be 3 * the length of the SEED. When the consistent test is run, the MSG hashed will always be the length of the SEED.
+NOTE: The MCTs were updated, 7/_/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion was added to the MCT test case JSON (See ___ section of this spec). When a value of "standard" is provided in the prompt file, the standard MCT test is run. When a value of "conistent" is provided in the prompt file, the consistent MCT test is run. When the standard test is run, the MSG hashed will always be 3 * the length of the SEED. When the consistent test is run, the MSG hashed will always be the length of the SEED.
 
 SHA-1 and SHA-2 Standard Monte Carlo Test:
 [source, code]
