Addresses comments from @celic

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -44,9 +44,9 @@ For j = 0 to 99
     For i = 0 to 999
         MSG = A || B || C
         if LEN(MSG) >= LEN(SEED):
-            MSG = TruncateToSize(MSG, LEN(SEED))                
+            MSG = leftmost LEN(SEED) bits of MSG
         else:
-            MSG = MSG || CreateZeroBitStringOfLength(LEN(SEED) - LEN(MSG))
+            MSG = MSG || LEN(SEED) - LEN(MSG) 0 bits
         MD = SHA(MSG)
         A = B
         B = C
