--- a/src/sha/sections/06-test-vectors.adoc
+++ b/src/sha/sections/06-test-vectors.adoc
@@ -28,6 +28,7 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | len | Length of the message or MCT seed | integer
+| mctVersion | The type of MCT being run, standard or consistent | string
 | msg | Value of the message or MCT seed in big-endian hex | integer
 | largeMsg | Object describing the message for an LDT group | large data object, see <<LD_test>> for more information
 |===
@@ -69,6 +70,7 @@ The following is an example JSON object for secure hash test vectors sent from t
                         "tcId": 2175,
                         "len": 20,
                         "msg": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
+                        "mctVersion": "consistent"
                     }
                 ]
             },
