Clarifies need for new SHA3 MCT test
Clarifies that the limitation of the original SHA3 MCT testing was !SupportedMessageLengths.Contains(digestSize), not !SupportedMessageLengths.Contains(3*digestSize).

--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -24,7 +24,7 @@ There are four types of tests for these hash functions: functional tests, Monte 
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
 
-NOTE: The MCTs were updated, 7/2023, to support the case where !SupportedMessageLengths.Contains(3*digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion was added to the MCT test case JSON (See ___ section of this spec). When a value of "standard" is provided in the prompt file, the standard MCT test is run. When a value of "conistent" is provided in the prompt file, the consistent MCT test is run. When the standard test is run, the MSG hashed will always be either the length of the SEED or the length of the digest size. When the consistent test is run, the MSG hashed will always be the length of the SEED.
+NOTE: The MCTs were updated, 7/2023, to support the case where !SupportedMessageLengths.Contains(digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion was added to the MCT test case JSON (See ___ section of this spec). When a value of "standard" is provided in the prompt file, the standard MCT test is run. When a value of "conistent" is provided in the prompt file, the consistent MCT test is run. When the standard test is run, the MSG hashed will always be either the length of the SEED or the length of the digest size. When the consistent test is run, the MSG hashed will always be the length of the SEED.
 
 SHA-3 Standard Monte Carlo Test:
 [source, code]
