--- a/src/sha/sections/06-test-vectors.adoc
+++ b/src/sha/sections/06-test-vectors.adoc
@@ -11,6 +11,7 @@ Test vector sets *MUST* contain one or many test groups, each sharing similar pr
 
 | tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | Test category type (AFT, MCT or LDT). See <<testtypes>> for more information | string
+| mctVersion | When testType is MCT, the type of MCT being run, i.e., "standard" or "alternate" | string
 | tests | Array of individual test case JSON objects, which are defined in	<<tcjs>> | array of testCase objects
 |===
 
@@ -28,7 +29,6 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | len | Length of the message or MCT seed | integer
-| mctVersion | The type of MCT being run, standard or consistent | string
 | msg | Value of the message or MCT seed in big-endian hex | integer
 | largeMsg | Object describing the message for an LDT group | large data object, see <<LD_test>> for more information
 |===
@@ -65,12 +65,12 @@ The following is an example JSON object for secure hash test vectors sent from t
             {
                 "tgId": 2,
                 "testType": "MCT",
+                "mctVersion": "standard",
                 "tests": [
                     {
                         "tcId": 2175,
                         "len": 20,
                         "msg": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
-                        "mctVersion": "consistent"
                     }
                 ]
             },
