--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -10,7 +10,7 @@ There are four types of tests for these hash functions: functional tests, Monte 
 
 * "AFT" - Algorithm Functional Test. These tests can be processed by the client using a normal 'hash' operation.  AFTs cause the implementation under test to exercise normal operations on a single block, multiple blocks, or partial blocks. In all cases, random data is used. The functional tests are designed to verify that the logical components of the hash function or extenable output function (block chunking, block padding etc.) are operating correctly.
 
-* "MCT" - Monte Carlo Test. These tests exercise the implementation under test under stenuous circumstances. The implementation under test must process the test vectors according to the correct algorithm and mode in this document. MCTs can help detect potential memory leaks over time, and problems in allocation of resources, addressing variables, error handling, and generally improper behavior in response to random inputs. Each MCT processes 100 pseudorandom tests. Each algorithm and mode SHOULD have at least one MCT group. See <<MC_test>> for implementation details.
+* "MCT" - Monte Carlo Test. These tests exercise the implementation under test under strenuous circumstances. The implementation under test must process the test vectors according to the correct algorithm and mode in this document. MCTs can help detect potential memory leaks over time, and problems in allocation of resources, addressing variables, error handling, and generally improper behavior in response to random inputs. Each MCT processes 100 pseudorandom tests. Each algorithm and mode SHOULD have at least one MCT group. See <<MC_test>> for implementation details.
 
 * "VOT" - Variable Output Test. These tests are for SHAKE only, and ensure that an IUT can properly perform the extendable output function to produce digests of specifc lengths. These tests differ from the AFTs for SHAKE in that the AFTs all produce a single digest size, matching the security strength of the extendable output function. The VOTs SHALL produce varying digest sizes based on the capabilities of the IUT.
 
@@ -24,7 +24,7 @@ There are four types of tests for these hash functions: functional tests, Monte 
 
 The MCTs start with an initial condition (SEED which is a single message) and perform a series of chained computations. The algorithm is shown below.
 
-NOTE: The MCTs were updated, 7/2023, to support the case where !SupportedMessageLengths.Contains(digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion was added to the MCT test case JSON (See ___ section of this spec). When a value of "standard" is provided in the prompt file, the standard MCT test is run. When a value of "conistent" is provided in the prompt file, the consistent MCT test is run. When the standard test is run, the MSG hashed will always be either the length of the SEED or the length of the digest size. When the consistent test is run, the MSG hashed will always be the length of the SEED.
+NOTE: The MCTs were updated, 7/2023, to support the case where !SupportedMessageLengths.Contains(digestSize), a limitation of the original MCT design. As part of this change, a new property, mctVersion, was added to the MCT test group JSON (See <<vs_tg_table>>). When a value of "standard" is provided for mctVersion in the prompt file, the standard MCT test is run. When a value of "alternate" is provided for mctVersion in the prompt file, the alternate MCT test is run. When the standard test is run, the MSG hashed will always be either the length of the SEED or the length of the digest size. When the alternate test is run, the MSG hashed will always be the length of the SEED.
 
 SHA-3 Standard Monte Carlo Test:
 [source, code]
@@ -38,7 +38,7 @@ MD[0] = SEED;
     SEED = MD[1000]
 ----
 
-SHA-3 Consistent Monte Carlo Test:
+SHA-3 Alternate Monte Carlo Test:
 [source, code]
 ----
 MD[0] = SEED
