--- a/src/sha3/sections/06-test-vectors.adoc
+++ b/src/sha3/sections/06-test-vectors.adoc
@@ -13,6 +13,7 @@ Test vector sets *MUST* contain one or many test groups, each sharing similar pr
 
 | tgId| Numeric identifier for the test group, unique across the entire vector set.| integer
 | testType| Test category type. AFT, MCT or VOT as defined in <<testtypes>>| value
+| mctVersion | When testType is MCT, the type of MCT being run, i.e., "standard" or "alternate" | string
 | tests| Array of individual test case JSON objects, which are defined in	<<tcjs>>| array of testCase objects
 |===
 
@@ -68,6 +69,7 @@ The following are example JSON objects for secure hash test vectors sent from th
         {
             "tgId": 2,
             "testType": "MCT",
+            "mctVersion": "standard",
             "tests": [
             {
                 "tcId": 3,
