--- a/src/mac/sections/05-gmac-capabilities.adoc
+++ b/src/mac/sections/05-gmac-capabilities.adoc
@@ -18,7 +18,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | keyLen | The keyLen supported | array | 128, 192, 256
 | ivLen | The IV lengths supported in bits, values *MUST* be mod 8 | domain | Min: 8, Max: 1024, Inc: 8
 | ivGen | The IV generation method (from the perspective of the IUT) | string | "internal", "external"
-| ivGenMode | The IV generation mode for use when the IUT is internally generating IVs | string | "8.2.1", "8.2.2"
+| ivGenMode | The IV generation mode for use when the IUT is generating IVs | string | "8.2.1", "8.2.2"
 | aadLen | The additional authenticated data length in bits | domain | Min: 0, Max: 65536, Inc: 8
 | tagLen | The supported mac/tag lengths | array | 32, 64, 96, 104, 112, 120, 128
 |===
