Updated modulo to modulus and vice versa where applicable for RSADP SP800-Br2 and RSASP v2.0

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -46,7 +46,7 @@ An example registration is the following
      "standard",
      "crt"
    ],
-   "modulus": [
+   "modulo": [
      2048,
      3072,
      4096
