--- a/src/rsa/sections/05-sigprim-capabilities.adoc
+++ b/src/rsa/sections/05-sigprim-capabilities.adoc
@@ -36,7 +36,7 @@ The following RSA / SignaturePrimitive / 2.0 capabilities *MAY* be advertised by
 |===
 | JSON value | Description | JSON type | Valid values
 
-| modulo | supported RSA modulo for signature generation - see <<FIPS186-4>>, Section 5 | array of integer | any of the supported modulo sizes {2048, 3072, 4096}
+| modulo | supported RSA moduli for signature generation - see <<FIPS186-4>>, Section 5 | array of integer | any of the supported modulus sizes {2048, 3072, 4096}
 | keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | array of string | "standard", "crt"
 | pubExpMode | Whether the IUT can handle a random or fixed public exponent | string | "random", "fixed"
 | fixedPubExp | The fixed public exponent e | hex | Any value supported by <<FIPS186-4>>: 65537 - 2^256-1, odd
@@ -50,14 +50,13 @@ The following is an example of the registration
     "algorithm": "RSA",
     "mode": "signaturePrimitive",
     "revision": "2.0",
-    "isSample": true,
     "pubExpMode": "fixed",
     "fixedPubExp": "010001"
     "keyFormat": [
         "standard",
         "crt"
     ],
-    "modulus": [
+    "modulo": [
         2048,
         3072,
         4096
