--- a/src/rsa/sections/06-sigprim-test-vectors.adoc
+++ b/src/rsa/sections/06-sigprim-test-vectors.adoc
@@ -125,10 +125,10 @@ Here is an abbreviated yet fully constructed example of the prompt
         "mode": "signaturePrimitive",
         "revision": "2.0",
         "isSample": false,
-        "testGroups": [
+        "testGroups":
         {
             "tgId": 1,
-            "modulo": 2048,
+            "modulus": 2048,
             "testType": "AFT",
             "keyMode": "standard",
             "tests": [
@@ -145,7 +145,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         },
         {
             "tgId": 2,
-            "modulo": 4096,
+            "modulus": 4096,
             "testType": "AFT",
             "keyMode": "crt",
             "tests": [
