--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -122,7 +122,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         "testGroups": [
         {
             "tgId": 1,
-            "modulo": 2048,
+            "modulus": 2048,
             "testType": "AFT",
             "keyMode": "standard",
             "tests": [
@@ -139,7 +139,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         },
         {
             "tgId": 2,
-            "modulo": 4096,
+            "modulus": 4096,
             "testType": "AFT",
             "keyMode": "crt",
             "tests": [
