--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -119,7 +119,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         "mode": "DecryptionPrimitive",
         "revision": "Sp800-56Br2",
         "isSample": false,
-        "testGroups": [
+        "testGroups":
         {
             "tgId": 1,
             "modulus": 2048,
