--- a/src/rsa/sections/06-sigprim-test-vectors.adoc
+++ b/src/rsa/sections/06-sigprim-test-vectors.adoc
@@ -128,7 +128,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         "testGroups":
         {
             "tgId": 1,
-            "modulus": 2048,
+            "modulo": 2048,
             "testType": "AFT",
             "keyMode": "standard",
             "tests": [
@@ -145,7 +145,7 @@ Here is an abbreviated yet fully constructed example of the prompt
         },
         {
             "tgId": 2,
-            "modulus": 4096,
+            "modulo": 4096,
             "testType": "AFT",
             "keyMode": "crt",
             "tests": [
