Updated DRBG to show support for SHA3.

--- a/src/drbg/sections/05-capabilities.adoc
+++ b/src/drbg/sections/05-capabilities.adoc
@@ -78,6 +78,10 @@ DRBG minimum/maximum values for the properties listed in <<capabilities-table>> 
 | hashDRBG | "SHA2-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 512
 | hashDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
 | hashDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
+| hashDRBG | "SHA3-224" | N/A | 192| 192 | 65536 | 65536 | 65536 | 96 | 224
+| hashDRBG | "SHA3-256" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 256
+| hashDRBG | "SHA3-384" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 384 
+| hashDRBG | "SHA3-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 512
 | hmacDRBG | "SHA-1" | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64 | 160
 | hmacDRBG | "SHA2-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
 | hmacDRBG | "SHA2-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
@@ -85,6 +89,10 @@ DRBG minimum/maximum values for the properties listed in <<capabilities-table>> 
 | hmacDRBG | "SHA2-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 512
 | hmacDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224 
 | hmacDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
+| hmacDRBG | "SHA3-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
+| hmacDRBG | "SHA3-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
+| hmacDRBG | "SHA3-384" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 384
+| hmacDRBG | "SHA3-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 512
 |===
 
 === DRBG Registration Example
