Adds note around `capabilities` vs `specificCapabilities` in LMS description * Fixes #1442

--- a/src/lms/sections/05-capabilities.adoc
+++ b/src/lms/sections/05-capabilities.adoc
@@ -27,11 +27,16 @@ Each LMS algorithm capability advertised is a self-contained JSON object using t
 | mode | The LMS mode to be validated | string | See <<supported>>
 | revision | The algorithm testing revision to use | string | See <<supported>>
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
-| capabilities | The general pairs of LMS and LMOTS modes that are supported | object | See <<capability_details>>
-| specificCapabilities | The set of exact LMS and LMOTS mode matches that are supported | array of objects | See <<specific_capability_details>>
+| capabilities | The general pairs of LMS and LMOTS modes that are supported. See note. | object | See <<capability_details>>
+| specificCapabilities | The set of exact LMS and LMOTS mode matches that are supported. See note. | array of objects | See <<specific_capability_details>>
 |===
 
 The capabilities advertised by the module must use the following JSON object schema. The ACVP server *MAY* select any pairing of values from the arrays to test.
+
+Note: The `capabilities` object is *preferred*, as it allows the ACVP server to select from a random sampling of the product of the registered capabilities.
+The `specificCapabilities` object can be used as an alternative, if your IUT does not support a wide variety of capabilities, and needs to have *specific* combinations tested against.
+
+The two `capabilities` and `specificCapabilities` cannot be used together with the same registration.
 
 [[capability_details]]
 .LMS Capability Details
