adds missing disposition values

--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1633,6 +1633,8 @@ The client will send this request to learn the validation results for an individ
 ** `incomplete` - indicates not all tests have been processed by the server, however none have failed thus far.
 ** `expired` - indicates not all the test case responses were received from the client prior to expiry.
 ** `passed` - indicates all test cases have been processed by the server and have passed.
+** `missing` - indicates that one or more test case responses were not received from the client.
+** `error` - indicates that the server encountered an error while processing the responses provided by the client.
 * *tests* - array of test result objects
 ** *tcId* - `number`
 ** *result* - `string`, the result for a test case with:
@@ -1641,6 +1643,7 @@ The client will send this request to learn the validation results for an individ
 *** `incomplete` - indicates the server has not processed the test case.
 *** `expired` - indicates the client did not send the test case response to the server prior to expiry.
 *** `passed` - indicates the test case passed.
+*** `missing` - indicates that a response was not received from the client for the test case.
 ** *reason* - `string`, provides additional detail in case of a `failed` `result` value.
 ** *expected* - `object`, provides the value(s) the server expected for the test case.
 ** *provided* - `object`, provides the value(s) the client provided for the test case.
