Updated DP 56br2 to show new fixed exponent functionality

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -34,6 +34,8 @@ The RSA decryptionPrimitive mode capabilities are advertised as JSON objects wit
 When testing the "standard"/prime-factor private key format, a ciphertext (ct), along with private key p, q and d component values are provided, see <<SP800-56Br2>>, Section 7.1.2.2 for details. If an IUT supports the basic private key format, the p and q values provided by the "standard"/prime-factor testing can be multiplied to produce the needed n value.  When testing for the Chinese Remainder Theorem private key format, a ciphertext (ct), the p, q, n, dmp1 (dP), dmq1 (dQ), and iqmp (qInv) values are provided, see <<SP800-56Br2>>, Section 7.1.2.3 for details. 
 See the ACVP specification for details on the registration message.
 
+An omitted pubExpMode will default to random.
+
 An example registration is the following
 
  ----
