Minor change to include the proper name of the output for RSADP 56Br2 changes

--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -127,7 +127,7 @@ Here is an abbreviated yet fully constructed example of the prompt
                 "modulo": 2048,
                 "testType": "AFT",
                 "keyMode": "standard",
-                "publicExponentMode": "random",
+                "pubExpMode": "random",
                 "tests": [
                     {
                         "tcId": 1,
@@ -145,7 +145,7 @@ Here is an abbreviated yet fully constructed example of the prompt
                 "modulo": 4096,
                 "testType": "AFT",
                 "keyMode": "crt",
-                "publicExponentMode": "random",
+                "pubExpMode": "random",
                 "tests": [
                     {
                         "tcId": 2,
