Adds KDA HKDF 56Cr2 saltLens registration property
Adds the saltLens registration property to KDA HKDF 56Cr2 to support IUTs that are constrained by the salt lengths that they support.

https://github.com/usnistgov/ACVP/issues/1424

--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -32,6 +32,7 @@ A registration *SHALL* use these properties:
 | encoding | The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string | concatenation 
 | hmacAlg | The HMAC modes supported by the KDA. | array of string | See <<hmacAlg>>
 | macSaltMethods | How the salt is determined (default being all 00s, random being a random salt). | array of string | default, random
+| saltLens | The salt lengths supported by the IUT in bits. This property is 1) optional and 2) only available for <<SP800-56Cr2>> testing. Per <<SP800-56Cr2>> Section 4.2, the "byte length [of the chosen salt must] be greater than zero but no greater than the length of a single input block to the hash function, hash, used to implement HMAC-hash." Refer also to <<SP800-56Cr2>> Table 1. | Domain | Min: 8, Max: See <<SP800-56Cr2>> Table 1, Increment: 8
 | z | The length(s) of the shared secret, Z, the IUT supports in bits. | Domain | Min: 224, Max: 65536, Increment: 8
 | usesHybridSharedSecret | Whether the IUT uses a hybrid shared secret. Only applicable for <<SP800-56Cr2>>. This property is required for "SP800-56Cr2" testing. Omit this property for "SP800-56Cr1" testing. | Boolean | true or false
 | auxSharedSecretLen | The length(s) of the auxiliary shared secret, T, the IUT supports in bits. Only applicable for <<SP800-56Cr2>>. This property is required for IUTs that implement a hybrid shared secret. Omit this property for "SP800-56Cr1" testing and for "SP800-56Cr2" testing without a hybrid shared secret. | Domain | Min: 112, Max: 65536, Increment: 8
