Updated CBC_MAC's updated fixedKey support.

--- a/src/conditioning-components/sections/05-capabilities.adoc
+++ b/src/conditioning-components/sections/05-capabilities.adoc
@@ -20,11 +20,14 @@ The following ConditioningComponent / AES-CBC-MAC / SP800-90B and ConditioningCo
 | mode | The specific conditioning component to be validated | string | "AES-CBC-MAC" or "BlockCipher_DF"
 | revision | The algorithm testing revision to use | string | "SP800-90B"
 | keyLen | The length of keys supported in bits | array | [128, 192, 256]
+| keys | User-defined keys used to generate, AES-CBC-MAC only | array | Must have matching keyLen support
 | payloadLen | The lengths in bits supported by the IUT | domain | [{"min": 8, "max": 65536, "inc": 8}]
 | outputLen | The lengths in bits suppoerted by the IUT as output only for BlockCipher_DF | domain | [{"min": 128, "max": 512, "inc": 8}]
 |===
 
 NOTE: For ConditioningComponent / AES-CBC-MAC / SP800-90B, the payload itself is processed through the encryption engine. Therefore the minimum 'payloadLen' is 128 bits and the minimum increment is 128 bits. In other words, all values within the 'payloadLen' must correspond to complete AES blocks in bits (a multiple of 128).
+
+Note: For ConditioningComponent / AES-CBC-MAC / SP800-90B, 'keys' must have a matching supported 'keyLen', i.e., if submitting a key of 128-bits, 'keyLen' must have 128 supported as well. The opposite is true as well, every kenLen must include a matching Key. When uder-defined keys are utilized, random keys will not be generated.
 
 The following is an example of a registration for ConditioningComponents / AES-CBC-MAC / SP800-90B
 
@@ -58,9 +61,10 @@ The following is an example of a registration for ConditioningComponents / Block
   "mode": "BlockCipher_DF",
   "revision": "SP800-90B",
   "keyLen": [
-    128,
-    192,
-    256
+    128
+  ],
+  "keys": [
+    D1C1B7FFB2CCE0BBF13D4F7B4A246A8D
   ],
   "payloadLen": [
     {
