--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -34,7 +34,18 @@ The RSA decryptionPrimitive mode capabilities are advertised as JSON objects wit
 When testing the "standard"/prime-factor private key format, a ciphertext (ct), along with private key p, q and d component values are provided, see <<SP800-56Br2>>, Section 7.1.2.2 for details. If an IUT supports the basic private key format, the p and q values provided by the "standard"/prime-factor testing can be multiplied to produce the needed n value.  When testing for the Chinese Remainder Theorem private key format, a ciphertext (ct), the p, q, n, dmp1 (dP), dmq1 (dQ), and iqmp (qInv) values are provided, see <<SP800-56Br2>>, Section 7.1.2.3 for details. 
 See the ACVP specification for details on the registration message.
 
-An omitted pubExpMode will default to random.
+Support was added for fixed public exponents, this is done through two settings, 'pubExpMode' and fixedPubExp'. When 'pubExpMode' is set to 'fixed', a 'fixedPubExp' is required. An omitted pubExpMode will default to random.
+
+[[DecryptionPrimitive2-0]]
+.Supported RSA DecryptionPrimitive 2.0 JSON Values
+|===
+| JSON value | Description | JSON type | Valid values
+
+| modulo | supported RSA moduli for signature generation - see <<FIPS186-4>>, Section 5 | array of integer | any of the supported modulus sizes {2048, 3072, 4096}
+| keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | array of string | "standard", "crt"
+| pubExpMode | Whether the IUT can handle a random or fixed public exponent | string | "random", "fixed"
+| fixedPubExp | The fixed public exponent e | hex | Any value supported by <<FIPS186-4>>: 65537 - 2^256-1, odd
+|===
 
 An example registration is the following
 
@@ -43,6 +54,8 @@ An example registration is the following
    "algorithm": "RSA",
    "mode": "decryptionPrimitive",
    "revision": "Sp800-56Br2",
+   "pubExpMode": "fixed",
+   "fixedPubExp": "010001",
    "keyFormat": [
      "standard",
      "crt"
