Edited previous change to match paradigm.

--- a/src/rsa/sections/05-decprim-capabilities.adoc
+++ b/src/rsa/sections/05-decprim-capabilities.adoc
@@ -54,7 +54,9 @@ An example registration is the following
    "algorithm": "RSA",
    "mode": "decryptionPrimitive",
    "revision": "Sp800-56Br2",
-   "pubExpMode": ["fixed"],
+   "pubExpMode": [
+    "fixed"
+   ],
    "fixedPubExp": "010001",
    "keyFormat": [
      "standard",
