Updated RSADP SP800-56Br2 algorithm to not use a list for pubExpMode.{

--- a/src/rsa/sections/05-capabilities.adoc
+++ b/src/rsa/sections/05-capabilities.adoc
@@ -36,6 +36,6 @@ Each RSA algorithm capability advertised is a self-contained JSON object using t
 
 NOTE: The 'infoGeneratedByServer' property is only valid for RSA / keyGen / * registrations.
 
-NOTE: The 'pubExpMode' and if the property is set to "fixed", the 'fixedPubExp', are only valid for RSA / decryptionPrimitive / Sp800-56Br2, RSA / keyGen / * , and RSA / sigVer / * registrations.
+NOTE: The properties 'pubExpMode` and `fixedPubExp` are only valid for RSA / decryptionPrimitive / Sp800-56Br2, RSA / keyGen / * , and RSA / sigVer / * registrations.
 
 NOTE: The 'keyFormat' property is only valid for RSA / decryptionPrimitive / Sp800-56Br2, and RSA / keyGen / * registrations.
