Updated the Psuedocode to show where the LEN of the SEED is obtained correctly, it would have been confusing for others.

--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -39,14 +39,15 @@ For j = 0 to 99
 SHA-1 and SHA-2 Alternate Monte Carlo Test:
 [source, code]
 ----
+INITIAL_SEED_LENGTH = LEN(SEED)
 For j = 0 to 99
     A = B = C = SEED
     For i = 0 to 999
         MSG = A || B || C
-        if LEN(MSG) >= LEN(SEED):
-            MSG = leftmost LEN(SEED) bits of MSG
+        if LEN(MSG) >= INITIAL_SEED_LENGTH:
+            MSG = leftmost INITIAL_SEED_LENGTH bits of MSG
         else:
-            MSG = MSG || LEN(SEED) - LEN(MSG) 0 bits
+            MSG = MSG || INITIAL_SEED_LENGTH - LEN(MSG) 0 bits
         MD = SHA(MSG)
         A = B
         B = C
