--- a/src/sha3/sections/04-testtypes.adoc
+++ b/src/sha3/sections/04-testtypes.adoc
@@ -42,13 +42,14 @@ SHA-3 Alternate Monte Carlo Test:
 [source, code]
 ----
 MD[0] = SEED
+INITIAL_SEED_LENGTH = LEN(SEED)
 For 100 iterations
     For i = 1 to 1000
         MSG = MD[i-1];
-        if LEN(MSG) >= LEN(SEED):
-            MSG = leftmost LEN(SEED) bits of MSG
+        if LEN(MSG) >= INITIAL_SEED_LENGTH:
+            MSG = leftmost INITIAL_SEED_LENGTH bits of MSG
         else:
-            MSG = MSG || LEN(SEED) - LEN(MSG) 0 bits
+            MSG = MSG || INITIAL_SEED_LENGTH - LEN(MSG) 0 bits
         MD[i] = SHA3(MSG)            
     MD[0] = MD[1000]
     Output MD[0]
