--- a/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
@@ -37,7 +37,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 
 [[caps_table]]
 
-.KAS ECC Capabilities JSON Values
+.KAS IFC SSC Capabilities JSON Values
 |===
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
