--- a/src/drbg/sections/05-capabilities.adoc
+++ b/src/drbg/sections/05-capabilities.adoc
@@ -32,14 +32,14 @@ Each DRBG algorithm capability advertised is a self-contained JSON object. A reg
 | mode | The algorithm mode to be validated | string | See the mode column of <<supported_values>>
 | derFuncEnabled | Derivation function option. See the notes below. | boolean | true/false
 | entropyInputLen | See the notes below. | domain | Min: maximum security strength (see <<supported_values>>), Max: See <<supported_values>>
-| nonceLen | See the notes below. | domain | Min: half the maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported
+| nonceLen | See the notes below. | domain | Min: half the maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported.
 | persoStringLen | Personalization string length. See the notes below. | domain | Min: maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported
 | additionalInputLen | See the notes below. | domain | Min: maximum security strength (see <<supported_values>>), Max: See <<supported_values>>. Set to 0 if not supported
 | returnedBitsLen | Returned bits length | integer | Min: See <<supported_values>>, Max: 4096.
 |===
 
  
-NOTE: If an implementation utilizes a nonce in the construction of a seed during instantiation, the length of the nonce shall be at least half the maximum security strength supported. See Tables 2 and 3 in <<SP800-90A>> for help on choosing appropriate parameter values for the tested DRBG implementation.
+NOTE: If an implementation utilizes a nonce in the construction of a seed during instantiation, the length of the nonce shall be at least half the maximum security strength supported. See Tables 2 and 3 in <<SP800-90A>> for help on choosing appropriate parameter values for the tested DRBG implementation. Per allowances in <<SP800-90A>>, the length of the nonce may be less than 1/2 the maximum security strength supported as long as the entropy input length + the nonce length >= 3/2 security strength.
 
 NOTE: If an implementation can only be used without prediction resistance, the array 'predResistanceEnabled' shall only contain a single 'false' element. Implementations that either have prediction resistance always ON or always OFF, the array 'predResistanceEnabled' shall contain two distinct elements, 'true' and 'false'. Implementations containing multiple equal array elements for 'predResistanceEnabled' will be rejected.
 
@@ -47,7 +47,7 @@ NOTE: For 'ctrDRBG' implementations, the 'derFuncEnabled' property must be inclu
 
 NOTE: All DRBGs are tested at their maximum supported security strength so this is the minimum bit length of the entropy input that ACVP will accept. The maximum supported security strength is also the default value for this input. Longer entropy inputs are permitted, with the following exception: for 'ctrDRBG' with 'derFuncEnabled' set to 'false', the 'entropyInputLen' must equal the seed length. See Tables 2 and 3 in <<SP800-90A>> for help on choosing appropriate parameter values for the DRBG being tested.
 
-NOTE: 'ctrDRBG' with 'derFuncEnabled' set to 'false' does not use a nonce; the nonce values, if supplied, will be ignored for this case. The default nonce bit length is one-half the maximum security strength supported by the mechanism/option. See Tables 2 and 3 in <<SP800-90A>> for help on choosing appropriate parameter values for the tested DRBG implementation.
+NOTE: 'ctrDRBG' with 'derFuncEnabled' set to 'false' does not use a nonce; A value of 0 shall be provided for nonceLen when testing 'ctrDRBG' with 'derFuncEnabled' set to 'false'.
 
 NOTE: ACVP allows bit length values for 'persoString' ranging from the maximum supported security strength except in the case of 'derFuncEnabled' set to 'false', where the second personalization string length must be less than or equal to the seed length. If the implementation only supports one personalization string length, then set only that value as the range min and max and set the step to 0. If the implementation does not use a 'persoString', set all range parameters (min, max, step) to 0. If the implementation can work with and without 'persoString', set the min to 0, set the max to at least the maximum supported strength and set the step equal to at least the maximum supported strength to avoid testing lengths less than that. See Tables 2 and 3 in <<SP800-90A>> for help on choosing appropriate parameter values for the tested DRBG implementation.
 
@@ -61,38 +61,38 @@ DRBG minimum/maximum values for the properties listed in <<capabilities-table>> 
 [[supported_values]]
 .Supported DRBG Values
 |===
-| DRBG Algorithm | Mode | Derivation Function | Max Security Strength | Min Entropy Len | Max Entropy Len | Max PersoString | Max Addl String | Min Nonce Len | Min returnedBits Len
+| DRBG Algorithm | Mode | Derivation Function | Max Security Strength | Min Entropy Len | Max Entropy Len | Max PersoString | Max Addl String | Min Nonce Len | Max Nonce Len | Min returnedBits Len
 
-| ctrDRBG | "AES-128" | TRUE | 128 | 128 | 65536 | 65536 | 65536 | 64 | 128
-| ctrDRBG | "AES-192" | TRUE | 192 | 192 | 65536 | 65536 | 65536 | 96 | 128
-| ctrDRBG | "AES-256" | TRUE | 256 | 256 | 65536 | 65536 | 65536 | 128 | 128
-| ctrDRBG | "TDES" | TRUE | 112 | 112 | 65536 | 65536 | 65536 | 56 | 64
-| ctrDRBG | "AES-128" | FALSE | 128 | 256 | 256 | 256 | 256 | 0 | 128
-| ctrDRBG | "AES-192" | FALSE | 192 | 320 | 320 | 320 | 320 | 0 | 128
-| ctrDRBG | "AES-256" | FALSE | 256 | 384 | 384 | 384 | 384 | 0 | 128
-| ctrDRBG | "TDES" | FALSE | 112 | 232 | 232 | 232 | 232 | 0 | 64
-| hashDRBG | "SHA-1" | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64 | 160
-| hashDRBG | "SHA2-224" | N/A | 192| 192 | 65536 | 65536 | 65536 | 96 | 224
-| hashDRBG | "SHA2-256" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 256
-| hashDRBG | "SHA2-384" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 384 
-| hashDRBG | "SHA2-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 512
-| hashDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
-| hashDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
-| hashDRBG | "SHA3-224" | N/A | 192| 192 | 65536 | 65536 | 65536 | 96 | 224
-| hashDRBG | "SHA3-256" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 256
-| hashDRBG | "SHA3-384" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 384 
-| hashDRBG | "SHA3-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 512
-| hmacDRBG | "SHA-1" | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64 | 160
-| hmacDRBG | "SHA2-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
-| hmacDRBG | "SHA2-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
-| hmacDRBG | "SHA2-384" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 384
-| hmacDRBG | "SHA2-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 512
-| hmacDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224 
-| hmacDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
-| hmacDRBG | "SHA3-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 224
-| hmacDRBG | "SHA3-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 256
-| hmacDRBG | "SHA3-384" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 384
-| hmacDRBG | "SHA3-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 512
+| ctrDRBG | "AES-128" | TRUE | 128 | 128 | 65536 | 65536 | 65536 | 64 | 65536 | 128
+| ctrDRBG | "AES-192" | TRUE | 192 | 192 | 65536 | 65536 | 65536 | 96 | 65536 | 128
+| ctrDRBG | "AES-256" | TRUE | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 128
+| ctrDRBG | "TDES" | TRUE | 112 | 112 | 65536 | 65536 | 65536 | 56 | 65536 | 64
+| ctrDRBG | "AES-128" | FALSE | 128 | 256 | 256 | 256 | 256 | 0 | 0 | 128
+| ctrDRBG | "AES-192" | FALSE | 192 | 320 | 320 | 320 | 320 | 0 | 0 | 128
+| ctrDRBG | "AES-256" | FALSE | 256 | 384 | 384 | 384 | 384 | 0 | 0 | 128
+| ctrDRBG | "TDES" | FALSE | 112 | 232 | 232 | 232 | 232 | 0 | 0 | 64
+| hashDRBG | "SHA-1" | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64 | 65536 | 160
+| hashDRBG | "SHA2-224" | N/A | 192| 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224
+| hashDRBG | "SHA2-256" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hashDRBG | "SHA2-384" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 384 
+| hashDRBG | "SHA2-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 512
+| hashDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224
+| hashDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hashDRBG | "SHA3-224" | N/A | 192| 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224
+| hashDRBG | "SHA3-256" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hashDRBG | "SHA3-384" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 384 
+| hashDRBG | "SHA3-512" | N/A | 256| 256 | 65536 | 65536 | 65536 | 128 | 65536 | 512
+| hmacDRBG | "SHA-1" | N/A | 128 | 128 | 65536 | 65536 | 65536 | 64 | 65536 | 160
+| hmacDRBG | "SHA2-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224
+| hmacDRBG | "SHA2-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hmacDRBG | "SHA2-384" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 384
+| hmacDRBG | "SHA2-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 512
+| hmacDRBG | "SHA2-512/224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224 
+| hmacDRBG | "SHA2-512/256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hmacDRBG | "SHA3-224" | N/A | 192 | 192 | 65536 | 65536 | 65536 | 96 | 65536 | 224
+| hmacDRBG | "SHA3-256" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 256
+| hmacDRBG | "SHA3-384" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 384
+| hmacDRBG | "SHA3-512" | N/A | 256 | 256 | 65536 | 65536 | 65536 | 128 | 65536 | 512
 |===
 
 === DRBG Registration Example
