--- a/src/eddsa/sections/06-eddsa-siggen-test-vectors.adoc
+++ b/src/eddsa/sections/06-eddsa-siggen-test-vectors.adoc
@@ -30,7 +30,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | message | The message used to generate the signature | hex
 | context | The context string defined in FIPS 186-5 sections 7.6 and 7.8 | hex
-| conextLength | The lengths the IUT supports in bits for generated context strings | domain | Min: 0, Max: 255
+| contextLength | The lengths the IUT supports in bits for generated context strings | domain | Min: 0, Max: 255
 |===
 
 NOTE: The 'context' property will only be present for 1) normal/'pure' EdDSA signature generation tests that use Ed448 and 2) Prehash EdDSA/HashEdDSA signature generation tests that use Ed448 or Ed25519.
