--- a/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
+++ b/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
@@ -16,6 +16,7 @@ The complete list of EDDSA signature generation capabilities may be advertised b
 | curve | The curve names supported for the IUT in sigGen | array | Any non-empty subset of {"ED-25519", "ED-448"}
 | pure | If the IUT supports normal 'pure' EdDSA signature generation functionality | bool | true/false
 | preHash | If the IUT supports Prehash EdDSA, i.e., HashEdDSA, signature generation functionality | bool | true/false
+| contextLength | The lengths the IUT supports in octets for generated context strings | domain | Min: 0, Max: 255
 |===
 
 The following is an example
