Fixes some issues on ML-DAS

--- a/src/draft-celi-acvp-ml-dsa.adoc
+++ b/src/draft-celi-acvp-ml-dsa.adoc
@@ -25,7 +25,7 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: ML-DSA
+:spec-algorithm: Module Lattice-based Digital Signature Algorithm (ML-DSA)
 :algo-short-name: ML-DSA
 
 include::common/common-sections/00-abstract.adoc[]
