--- a/src/ml-dsa/sections/04-testtypes.adoc
+++ b/src/ml-dsa/sections/04-testtypes.adoc
@@ -9,7 +9,9 @@ The ACVP server performs a set of tests on the specified ML-DSA algorithm in ord
 
 * ML-DSA / keyGen / * "AFT" - Algorithm Functional Test. The IUT is *REQUIRED* for each test case provided, to generate a key pair from a provided seed. The key pair is communicated to the ACVP server and validated.
 
-* ML-DSA / sigGen / * "AFT" - Algorithm Functional Test. This testing mode expects the IUT to generate valid signatures based on the ACVP provided message. The signature is then validated with the ACVP server given the IUT's communicated parameter set, public key, and signature.
+* ML-DSA / sigGen / * "AFT" - Algorithm Functional Test. This testing mode expects the IUT to generate valid signatures based on the ACVP provided message. The signature is then compared to the known result by the ACVP server given the IUT's communicated parameter set, public key, and signature.
+
+* ML-DSA / sigGen / * "GDT" - Generated Data Test. This testing mode expects the IUT to generate a valid signature and key pair for the ACVP provided message. The client *SHALL* communicate the public key and signature back to the server. The signature is then validated by the ACVP server using the defined signature verification routine. 
 
 * ML-DSA / sigVer / * "AFT" - Algorithm Functional Test. The ACVP server generates a series of signatures to communicate to the IUT. The IUT is *REQUIRED* to determine the validity of the signature given the parameter set, key, and message.
 
