--- a/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
+++ b/src/ml-dsa/sections/05-ml-dsa-sigver-capabilities.adoc
@@ -2,7 +2,7 @@
 [[ml-dsa_sigVer_capabilities]]
 ==== ML-DSA sigVer Mode Capabilities Example
 
-Below is an example of the registration for ML-DSA / sigVer / 1.0
+Below is an example of the registration for ML-DSA / sigVer / FIPS204
 
 [source, json]
 ----
