--- a/src/ml-dsa/sections/06-ml-dsa-keygen-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-ml-dsa-keygen-test-vectors.adoc
@@ -53,7 +53,7 @@ The following is an example JSON object sent from the server to the client for M
                 "tests": [
                     {
                         "tcId": 1,
-                        "seed": "C105DC2645DD0A50E11516581565AC6D7D793F3E7E5E1DDCE6DDF70DA45C3EBF"
+                        "seed": "C105DC2..."
                     }
                 ]
             }
