--- a/src/ml-dsa/sections/06-ml-dsa-sigver-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-ml-dsa-sigver-test-vectors.adoc
@@ -31,7 +31,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | message | The message used to verify with the signature | hex
-| signature | THe signature to verify | hex
+| signature | The signature to verify | hex
 |===
 
 The following is an example JSON object sent from the server to the client for ML-DSA / sigVer / FIPS204.
