--- a/src/ml-dsa/sections/06-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-test-vectors.adoc
@@ -6,8 +6,8 @@ The ACVP server provides test vectors to the ACVP client, which are then process
 
 The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client. The following table describes the JSON elements at the top level of the hierarchy.
 
-[[lms_vs_top_table]]
-.LMS Vector Set JSON Object
+[[ml-dsa_vs_top_table]]
+.ML-Dsa Vector Set JSON Object
 |===
 | JSON Value | Description | JSON type
 
@@ -16,5 +16,5 @@ The test vector set JSON schema is a multi-level hierarchy that contains meta da
 | algorithm | The algorithm used for the test vectors | string
 | mode | The mode used for the test vectors | string
 | revision | The algorithm testing revision to use | string
-| testGroups | Array of test group JSON objects, which are defined in <<ml-dsa_keyGen_vs_tr_table>>, <<ml-dsa_sigGen_vs_tr_table>>, or <<ml-dsa_sigVer_vs_tr_table>> depending on the algorithm | array
+| testGroups | Array of test group JSON objects, which are defined in <<ML-DSA_keyGen_vs_tr_table>>, <<ML-DSA_sigGen_vs_tr_table>>, or <<ML-DSA_sigVer_vs_tr_table>> depending on the algorithm | array
 |===
