--- a/src/ml-dsa/sections/07-ml-dsa-siggen-responses.adoc
+++ b/src/ml-dsa/sections/07-ml-dsa-siggen-responses.adoc
@@ -9,7 +9,7 @@ The test groups for ML-DSA / sigGen / FIPS204 contain public key properties. The
 | JSON Value | Description | JSON type
 
 | tgId | The test group identifier | integer
-| pk | The public key the IUT used when `"testType": "GDT"` | hex
+| pk | The public key the IUT used when the prompt test group property `"testType": "GDT"` | hex
 | tests | The individual test cases for the group | array
 |===
 
