--- a/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
+++ b/src/ml-dsa/sections/06-ml-dsa-siggen-test-vectors.adoc
@@ -15,7 +15,7 @@ The test group for ML-DSA / sigGen / FIPS204 is as follows:
 
 | testType | The test operation performed | string
 | parameterSet | The ML-DSA parameter set used | string
-| deterministic | Whether the signatures should be generated using the deterministic or non-deterministic routine | bool
+| deterministic | Whether the signatures should be generated using the deterministic or non-deterministic routine | boolean
 | tests | Array of individual test vector JSON objects, which are defined in <<ML-DSA_sigGen_tvjs>> | array
 |===
 
@@ -31,8 +31,8 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | message | The message used to generate the signature | hex
-| sk | For `"testType": "AFT"`, the secret key that should be used to generate a signature | hex
-| rnd | For `"testType": "AFT"` and `"deterministic": false`, the random value used to generate the signature | hex
+| sk | When the test group property `"testType": "AFT"`, the secret key that should be used to generate a signature | hex
+| rnd | When the test group properties `"testType": "AFT"` and `"deterministic": false`, the random value used to generate the signature | hex
 |===
 
 The following is an example JSON object sent from the server to the client for ML-DSA / sigGen / FIPS204.
